--- a/index-style.css
+++ b/index-style.css
@@ -11,7 +11,7 @@ body{
   margin auto centers, top and left are adjusted for ideal placement
   border radius for rounded edges
   */
-.login {
+.login-form {
     height: 550px;
     width: 650px;
     margin-top: 8%;
@@ -21,6 +21,7 @@ body{
     padding: 20px;
     background: black;
     opacity: 0.7;
+    overflow: hidden;
 }
 
 /*input box design*/
@@ -42,4 +43,156 @@ body{
     color: white;
     text-decoration: none;
     font-weight: bold;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+/*login and admin slider design*/
+.login-form .slide-controls {
+  position: relative;
+  display: flex;
+  height: 50px;
+  width: 70%;
+  overflow: hidden;
+  margin: 30px 0 10px 0;
+  justify-content: space-between;
+  border: 1px solid lightgrey;
+  border-radius: 15px;
+}
+
+.slide-controls .slide {
+  height: 100%;
+  width: 100%;
+  color: #fff;
+  font-size: 22px;
+  font-weight: 500;
+  text-align: center;
+  line-height: 48px;
+  cursor: pointer;
+  z-index: 1;
+  transition: all 0.6s ease;
+}
+
+.slide-controls label.signup {
+  color: #000;
+}
+
+.slide-controls .slider-tab {
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  left: 0;
+  z-index: 0;
+  border-radius: 15px;
+  /* background: -webkit-linear-gradient(left, #f50a0a, #f72720, #f13030, #f5533d); */
+  background: red;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+#signup:checked ~ .slider-tab {
+  left: 50%;
+}
+#signup:checked ~ label.signup {
+  color: #fff;
+  cursor: default;
+  user-select: none;
+}
+#signup:checked ~ label.login {
+  color: #000;
+}
+#login:checked ~ label.signup {
+  color: #000;
+}
+#login:checked ~ label.login {
+  cursor: default;
+  user-select: none;
+}
+
+/*===========================================================*/
+
+/*input container design*/
+.login-form .form-container {
+  width: 100%;
+  overflow: hidden;
+  padding-left: 15%;
+}
+.form-container .form-inner {
+  display: flex;
+  width: 200%;
+}
+.form-container .form-inner form {
+  width: 50%;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+/*input boxes design*/
+.form-inner form .field {
+  height: 50px;
+  width: 100%;
+  margin-top: 20px;
+}
+.form-inner form .field input {
+  height: 100%;
+  width: 80%;
+  outline: none;
+  padding-left: 15px;
+  border-radius: 15px;
+  border: 1px solid lightgrey;
+  border-bottom-width: 2px;
+  font-size: 17px;
+  transition: all 0.3s ease;
+}
+.form-inner form .field input:focus {
+  border-color: #1a75ff;
+  /* box-shadow: inset 0 0 3px #fb6aae; */
+}
+.form-inner form .field input::placeholder {
+  color: #999;
+  transition: all 0.3s ease;
+}
+form .field input:focus::placeholder {
+  color: #1a75ff;
+}
+
+form .btn {
+  height: 50px;
+  width: 60%;
+  border-radius: 15px;
+  position: relative;
+  overflow: hidden;
+}
+form .btn .btn-layer {
+  height: 100%;
+  width: 160%;
+  position: absolute;
+  left: -100%;
+  /* background: -webkit-linear-gradient(
+    right,
+    #003366,
+    #004080,
+    #0059b3,
+    #0073e6
+  ); */
+  background: red;
+  border-radius: 15px;
+  transition: all 0.4s ease;
+}
+/* form .btn:hover .btn-layer {
+  left: 0;
+} */
+form .btn input[type="submit"] {
+  height: 100%;
+  width: 60%;
+  z-index: 1;
+  position: relative;
+  background: none;
+  border: none;
+  color: #fff;
+  padding-left: 0;
+  border-radius: 15px;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
 }
